# essiip-fakesinqhw

./: .gitignore
fakeDChopper/: SIM_ASTRIUM.py  SIM_SINQ.py  chopper_SIM_SINQ.service
fakeEL734/: el734controller.py  el734motor.py  el734motor.py~  parlist
fakeEL737/: el737counter.py  el737generator.py  generator.py
fakeEmmenegger/: emmi.tcl
fakeMDIF/: mdif.tcl
fakeMagnet/: SLSVME.py
fakeNHQ/: fakeNHQ.py
fakeNVS/: SIM_NVS.py  SIM_SINQ.py
fakeNanotec/: nanotecController.py  nanotecmotor.py
fakePhytron/: README.md  physhell.tcl  phytron.tcl
fakeSPS/: README.md  spss5.py
fakeTempControl/lakeshore/: LS336.py  LS340.py  LS370.py  Lakeshore336.py  Lakeshore340.py  Lakeshore370.py  LakeshoreDevice.py  LakeshoreFactory.py  LakeshoreProtocol.py  SIM_LS336.tcl
fakeTempControl/oxford/: MercuryDevice.py  MercuryFactory.py  MercuryProtocol.py  MercurySCPI.py  SIM_MERCURY.py
neventGenerator/: CMakeLists.txt  FOCUSgenerator.cxx  FOCUSreceiver.cxx  Makefile  Makefile~  config.json  focus.json  kafka_generator.hpp  neventArray.c~  neventArray.h~  nexus2event.c~  nexus_reader.hpp  posix-timers.c~  zmqGenerator  zmqGenerator.c  zmqGenerator.c~  zmqReader  zmqReader.c  zmqReader.c~
neventGenerator/conan/: conanfile.txt
neventGeneratorEpics/src/: listenerUtils.cpp  listenerUtils.h  neventMonitor.cpp
neventGeneratorPy/: control.in  orig.out
sputter/: ._server.py  server.py
util/: command.tcl  config_edit.py  config_reader.tcl  displayscreen.py  eventutil.tcl  extra_utility.tcl  fopdt.py  gen_sct.py  genmotconf.tcl  genmotconf_procs.tcl  gitloader.py  gitrefer.py  mk_SICSmd5.sh  motor_utility.tcl  pid.py  runsics  runtestsics  script_context_util.tcl  sicsclient  utility.tcl  whatsthere.py  write_tree.tcl
util/check/: README.TXT  check_hdb.tcl  check_sobj.tcl  query_sics.tcl
util/dmc2280/: ckmd5.sh  dmc2280_util.tcl  getDMCprog.tcl  mkmd5.sh  motorinfo.tcl  putDMCprog.tcl  troubleShoot.tcl
